# thinker-robot-engine-controller

./: .gitignore  CMakeLists.txt  README.md  deploy-claw.sh  deploy-elbow.sh  deploy-shoulder.sh  deploy-wrist.sh  pico-mount.sh
Config/: FreeRTOSConfig.h
claw-control/: CMakeLists.txt  main.cpp  main.h
claw-control/armClaw/: armClaw.cpp  armClaw.h
common/BNO080/: BNO080.cpp  BNO080.h
common/VL53L0X/: Pico_VL53L0X.cpp  Pico_VL53L0X.h  vl53l0x_def.h  vl53l0x_i2c_platform.h
common/VL53L0X/core/src/: vl53l0x_api_calibration.cpp
common/VL6180x/: VL6180x.cpp  VL6180x.h
common/accelerometer/: accelerometer.cpp  accelerometer.h
common/accuracy/: accuracy.cpp  accuracy.h
common/armPart/: armPart.cpp  armPart.h
common/armPlatform/: armPlatform.cpp  armPlatform.h
common/atomic/: atomic.h
common/barometer/: barometer.h
common/bmp280/: bmp280.cpp  bmp280.h  sensor.cpp  sensor.h
common/bootsel/: bootsel.cpp  bootsel.h
common/bus/: bus.cpp  bus.h
common/canRingBuffer/: canRingBuffer.h
common/config/: config.h
common/detectors/: detectors.cpp  detectors.h
common/euler/: euler.cpp  euler.h
common/flashSettings/: flashSettings.cpp  flashSettings.h
common/gyroscope/: gyroscope.cpp  gyroscope.h
common/hooks/: hooks.cpp
common/i2cScan/: i2cScan.cpp  i2cScan.h
common/imuBase/: imuBase.cpp  imuBase.h
common/localBNO/: localBNO.cpp  localBNO.h
common/localWitmotion/: localWitmotion.cpp  localWitmotion.h
common/logQueue/: logQueue.cpp  logQueue.h
common/measureRange/: measureRange.cpp  measureRange.h
common/mpu6500/: mpu6500.cpp  mpu6500.h
common/mpu9250/: mpu9250.cpp  mpu9250.h  quaternionFilter.cpp  quaternionFilter.h  registerMap.h
common/overwriteRingBuffer/: overwriteRingBuffer.h
common/periodic/: periodic.h
common/position/: position.cpp  position.h  positionBNO.cpp  positionBNO.h  positionWitmotion.cpp  positionWitmotion.h
common/power/: power.cpp  power.h
common/qBase/: qBase.cpp  qBase.h
common/quaternion/: quaternion.cpp  quaternion.h
common/quaternionFilter/: quaternionFilter.cpp  quaternionFilter.h
common/rangeDetector/: rangeDetector.cpp  rangeDetector.h
common/remoteBNO/: remoteBNO.cpp  remoteBNO.h
common/remoteClaw/: remoteClaw.cpp  remoteClaw.h
common/remoteElbow/: remoteElbow.cpp  remoteElbow.h
common/remoteShoulder/: remoteShoulder.cpp  remoteShoulder.h
common/remoteWrist/: remoteWrist.cpp  remoteWrist.h
common/ringBuffer/: ringBuffer.h
common/sensorFusion/: sensorFusion.cpp  sensorFusion.h
common/servo/: servo.cpp  servo.h
common/speedBuffer/: speedBuffer.h
common/structureBase/: structureBase.h
common/witmotion/: WitMotion.cpp  WitMotion.h
common/xyzFloat/: xyzFloat.cpp  xyzFloat.h
elbow-control/: CMakeLists.txt  main.cpp  main.h
elbow-control/armElbow/: armElbow.cpp  armElbow.h
shoulder-control/: CMakeLists.txt  main.cpp  main.h
shoulder-control/VL53L0X/: vl53l0x_i2c_platform.h
shoulder-control/VL53L0X/core/src/: vl53l0x_api.cpp  vl53l0x_api_calibration.cpp  vl53l0x_api_core.cpp  vl53l0x_api_strings.cpp
shoulder-control/VL53L0X/platform/src/: vl53l0x_i2c_comms.cpp  vl53l0x_platform.cpp
shoulder-control/armShoulder/: armShoulder.cpp  armShoulder.h
wrist-control/: CMakeLists.txt  main.cpp  main.h
wrist-control/armWrist/: armWrist.cpp  armWrist.h
