cmake_minimum_required(VERSION 3.14)

set(FREERTOS_KERNEL_PATH "${CMAKE_SOURCE_DIR}/FreeRTOS-Kernel")


set(PROJECT_NAME "THINKER_ROBOT_ENGINE_CONTROL")
set(BUILD_NUMBER "1")

set(APP_SHOULDER_NAME "ENGINE_CONTROL_SHOULDER")
set(APP_SHOULDER_VERSION_NUMBER "0.0.1")
set(APP_ELBOW_NAME "ENGINE_CONTROL_ELBOW")
set(APP_ELBOW_VERSION_NUMBER "0.0.1")
set(APP_WRIST_NAME "ENGINE_CONTROL_WRIST")
set(APP_WRIST_VERSION_NUMBER "0.0.1")
set(APP_CLAW_NAME "ENGINE_CONTROL_CLAW")
set(APP_CLAW_VERSION_NUMBER "0.0.1")

set(APP_SHOULDER_SRC_DIRECTORY "${CMAKE_SOURCE_DIR}/shoulder-control")
set(APP_ELBOW_SRC_DIRECTORY    "${CMAKE_SOURCE_DIR}/elbow-control")
set(APP_WRIST_SRC_DIRECTORY    "${CMAKE_SOURCE_DIR}/wrist-control")
set(APP_CLAW_SRC_DIRECTORY     "${CMAKE_SOURCE_DIR}/claw-control")
set(APP_COMMON_DIRECTORY       "${CMAKE_SOURCE_DIR}/common")
set(FREERTOS_CFG_DIRECTORY     "${CMAKE_SOURCE_DIR}/Config")

add_compile_definitions($<$<CONFIG:Debug>:DEBUG=1>)

set(FREERTOS_ENABLE_TIMERS 1)

# Pico SDK path
set(ENV{PICO_SDK_PATH} "${CMAKE_SOURCE_DIR}/pico-sdk")

include(pico_sdk_import.cmake)
include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)

project(${PROJECT_NAME}
    LANGUAGES C CXX ASM
    DESCRIPTION "Engine control for robotic arm"
)

pico_sdk_init()

add_subdirectory(${APP_SHOULDER_SRC_DIRECTORY})
add_subdirectory(${APP_ELBOW_SRC_DIRECTORY})
add_subdirectory(${APP_WRIST_SRC_DIRECTORY})
add_subdirectory(${APP_CLAW_SRC_DIRECTORY})